[package]
name = "net"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Cruz <gabrieldemelocruz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
indoc = "2.0.4"
itertools = "0.12.1"
tempfile = "3.10.1"
