[package]
name = "netxt"
version = "0.1.3"
edition = "2021"
authors = ["Gabriel Cruz <gabrieldemelocruz@gmail.com>"]
description = " Handling TODO .txt files"
license = "MIT"
repository = "https://github.com/gmelodie/netxt"
keywords = ["parser", "todo", "task", "txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
indoc = "2.0.4"
itertools = "0.12.1"
tempfile = "3.10.1"
